Carga TP Bootstrap

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="#">Proyectos</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
+                <a class="nav-link dropdown-toggle" href="Contact.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Contacto 
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item" href="#">Action</a></li>
@@ -49,15 +49,24 @@
 
 <body>
         
-<h1 class="text-center">Primer Entrega de Bootstrap</h1>
+<h1 class="text-center">Cambiemos el mundo Juntos</h1>
     
     <main class="container">
         <div class="row">
-            <divc class="col-6 border p-3 bg-primary">
-                <h2>PRUEBA COL1</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam culpa hic voluptates animi, dolorem nobis natus delectus vero odio ullam architecto dolore itaque cupiditate eaque dolorum rerum dolores accusantium qui?
+            <div class="col-6 border p-3 bg-light">
+                <h2>¿Quienes Somos?</h2>
+                <p>Somos una organización que junta a emprendedores con mentores, para poder aumentar la probabilidad de éxito de pequeños proyectos con impacto, facilitando también el acceso a inversiones y el contacto con fondos.
+                    De esta forma damos visibilidad a miles de proyectos en los países menos desarrollados, logrando el crecimiento de los mismos y que diversas sociedades y miles de personas  se vean beneficiados por el acceso a nuevas tecnologías y a ideas que les cambiarán la vida.
                 </p>
+
             </div>
+            <div class="col-6 border p-3 bg-light">
+                <img src="./Imagenes/manos.webp" width="100%" alt="foto1">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 border p-3 bg-light"></div>
+            <img src="./Imagenes/banner.jpg" width="00px" alt="foto2">
         </div>
     </main>
     <footer>
